# light-welter

./: CMakeLists.txt  CMakeRC.cmake  README.md  settings.xml
inc/: build_config.h.in  config.h  exceptions.h  lights.h  log.h  lwmath.h  material.h  mesh.h  pathtracer.h  raycaster.h  raytracer.h  renderable.h  rendereable.h  sampler.h  scene.h  shader.h  spectrum.h  texture.h  view.h  view_opengl.h  view_raytracer.h  visualisation.h
res/: default_configuration.xml
res/conference/: conference.rtc
res/phoenix/: phoenix.rtc
res/sponza/: sponza.rtc
res/view_test/: cornell  cornell.exr  cornell.rtc  cornell2.rtc  cornell_box.mtl  view_test.mtl  view_test.rtc
shaders/: SimpleTransform.vertexshader  SingleColor.fragmentshader  fragment.frag  fragment.shader  vertex.shader  vertex.vert
src/: config.cpp  lights.cpp  log.cpp  lwmath.cpp  main.cpp  material.cpp  mesh.cpp  pathtracer.cpp  raycaster.cpp  raytracer.cpp  sampler.cpp  shader.cpp  spectrum.cpp  texture.cpp  view_opengl.cpp  view_raytracer.cpp  visualisation.cpp
tests/: simple_test.cpp
